infrastructure/dns/network.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: lan-dns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: lan-dns
  ingress:
  - fromCIDR:
    - ${DNS_CLIENT_CIDR}
    toPorts:
    - ports:
      - port: '1053'
        protocol: UDP
      - port: '1053'
        protocol: TCP
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: '1053'
        protocol: UDP
      - port: '1053'
        protocol: TCP
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: '8080'
        protocol: TCP
      - port: '8181'
        protocol: TCP
